kubernetes/istio/egress-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-egress
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.32
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.32
